zoom in image view navigation
jetzt kann man auch im Einzelbildmodus mit den Pfeiltasten durchschalten

--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,10 @@ body {
     background-attachment: fixed;
 }
 
+.kontakt:hover {
+    background: rgb(240,240,240) !important;
+}
+
 #mjs-wrapper {overflow:hidden;position:fixed;transition: background 0.2s ease;z-index: 1;}
 
 #mjs-wrapper .menulink h1 {width:100%;font-size: 2rem;pointer-events: none;}
